crates/wac-parser/tests/resolution/fail/target-import-mismatch.wac
package test:comp targets test:comp/foo;

world foo {
    import foo: func();
}

import foo2 as foo: interface {

};
